Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   public/css/player.css
	modified:   public/css/style.css
	modified:   public/css/team.css
	modified:   public/css/tournament.css
	modified:   public/css/user.css
	modified:   src/Controller/EditorController.php
	modified:   src/Controller/PlayerController.php
	modified:   src/Controller/TournamentController.php
	modified:   templates/base.html.twig
	modified:   templates/home/index.html.twig
	modified:   templates/moderator/listUsers.html.twig
	modified:   templates/player/index.html.twig
	modified:   templates/security/login.html.twig
	modified:   templates/security/userProfile.html.twig
	modified:   templates/team/teamDetails.html.twig
	modified:   templates/tournament/index.html.twig
	modified:   templates/tournament/tournamentDetails.html.twig
	modified:   templates/tournament/tournamentForm.html.twig

--- a/public/css/player.css
+++ b/public/css/player.css
@@ -76,3 +76,43 @@
 #countryBoxes label {
   margin-right: 20px;
 }
+
+/****************************************Player List ************************************************/
+#playersList{
+  margin-top: 2em;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-around;
+  padding: 2em;
+}
+
+#playersList li{
+  width: 30%;
+  list-style: none;
+}
+
+#playersList figure{
+  width: 100%;
+  position: relative;
+}
+
+#playersList figure img{
+  width: 100%;
+}
+
+#playersList figcaption{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(0,0,0,0.8);
+  text-align: center;
+  padding: 1em;
+}
+
+#playersList figcaption a{
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  font-size: 2em;
+}
