--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -168,7 +168,7 @@
                             </a>
 
                             {# where the hide class will be toggled #}
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu" id="dropDownList">
 
                                 {# Link to create a new game #}
                                 <li><a href="{{ path('new_game') }}" class="dropdown-item">Jeu</a></li>
