--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Bienvenue sur Esport Xpertise - Le site d'information sur l'esport{% endblock %}
+{% block meta_description %}Esport Xpertise est un site d'information sur la compétition dans le jeu vidéo, visite ce site pour simplement te renseigner ou pour suivre tes équipes d'esport favorites{% endblock %}
 
     
 {% block body %}
