--- a/templates/tournament/tournamentForm.html.twig
+++ b/templates/tournament/tournamentForm.html.twig
@@ -15,7 +15,7 @@
         {% include "searchbarGame.html.twig" %}
 
         <label for="numberPlayer">Combien de joueurs par équipe ?</label>
-        <input type="number" name="numberPlayer" class="form-control">
+        <input id="numberPlayer" type="number" name="numberPlayer" class="form-control">
     {{ form_end(form) }}
    
 {% endblock %}
