--- a/public/css/team.css
+++ b/public/css/team.css
@@ -88,7 +88,8 @@
 
 .wrapper{
     width: 100%;
-    height: 100vh;
+    height: auto;
+    margin: 2em 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -152,10 +153,28 @@
 
 .description h4 {
     text-transform: uppercase;
+    margin-top: 1em;
+    
+}
+
+.description h4 a{
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    
 }
 
 .rosterRadio{
     display: none;
+}
+
+.rosterButtons,
+.modifyDeleteButton,
+.addRosterOrPlayer{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 2em;
 }
 
 .rosterRadio:checked + label{
@@ -165,4 +184,16 @@
 .rosterRadio:checked + label .description{
     opacity: 1 !important;
     transform: translateY(0) !important;  
+}
+
+.rosterTitle{
+    text-align: center;
+    margin-top: 2em;
+    font-weight: 700;
+
+}
+
+.creationdate{
+    color: #fff;
+    margin: 2em;
 }
