--- a/public/css/user.css
+++ b/public/css/user.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 2em;
 }
 
 .profilePicture img{
@@ -12,6 +13,22 @@
     margin-right: 5px;
 }
 
+.favoriteTeamLogo{
+    width: 30%;
+    position: relative;
+}
+
+.favoriteTeamLogo img{
+    width: 100%;
+}
+
+#userPage{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
 /************************************************************* REGISTRATION FORM ***********************************/
 .formRowPassword{
     width: 100%;
@@ -23,4 +40,78 @@
     width: 45%;
 }
 
-/* login */
+/******************************************************** login ********************************************************/
+#loginForm{
+    display: flex;
+    flex-direction: column;
+}
+
+#loginForm label{
+    margin-top: 2em;
+}
+
+.loginFormRemember{
+    display: flex;
+    justify-content: space-between;
+}
+
+#loginForm p{
+    margin: 2em 0;
+}
+
+
+#loginButton{
+    background-image: url(../img/4d3uKwt812GoqIOoWCaUcKG.jpg);
+    color: #333;
+    font-weight: bold;
+    align-self: center;
+    border: #fff;
+    width: 100%;
+}
+
+/************************************************************* Moderator page ******************************/
+#listUsers{
+    margin-top: 2em;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-around;
+    padding: 2em;
+}
+
+#listUsers li{
+    width: 30%;
+    list-style: none;
+}
+
+#listUsers figure{
+    width: 100%;
+    position: relative;
+}
+
+#listUsers figure img{
+    width: 100%;
+}
+
+#listUsers figcaption{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(0,0,0,0.8);
+    text-align: center;
+    padding: 1em;
+}
+
+#listUsers figcaption a{
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    font-size: 2em;
+}
+
+.moderatorButtons{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+}
