--- a/templates/player/index.html.twig
+++ b/templates/player/index.html.twig
@@ -8,7 +8,13 @@
         <ul id="playersList">
             {% for player in players %}
                 <li> 
-                    <a href="{{ path('details_player', {'id': player.id}) }}">{{ player }}</a>
+                    <figure>
+                        <img src="{{ asset('upload/pictures/' ~ player.picture) }}" alt="photo de {{player}}">
+                        <figcaption>
+                            <a href="{{ path('details_player', {'id': player.id}) }}">{{ player }}</a>
+                        </figcaption>
+                    </figure>
+                    
                 </li>
             {% endfor %}
         </ul>
